[project]
name = "PBHB"
version = "1.0.0"
description = "Python Bit Heroes Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dearpygui>=2.2",
    "httpx>=0.28.1",
    "keyboard>=0.13.5",
    "mss>=10.1.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "psutil>=7.2.2",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pyinstaller>=6.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]
